# rust-training

advance_concepts/async_execution/: Cargo.toml
advance_concepts/async_execution/src/: main.rs
advance_concepts/generics_traits/src/: main.rs
advance_concepts/polymorphism/: Cargo.toml
advance_concepts/polymorphism/src/: main.rs
advance_concepts/state_share_channel/: Cargo.toml
advance_concepts/state_share_channel/src/: main.rs
advance_concepts/threading/src/: main.rs
exercises/custom_enum_variant/: Cargo.toml
exercises/custom_enum_variant/src/: main.rs
exercises/datetime_formatter/: Cargo.toml
exercises/datetime_formatter/src/: lib.rs  main.rs
exercises/datetime_parser/: Cargo.toml  Readme.md
exercises/datetime_parser/src/: lib.rs  main.rs
exercises/datetime_parser/tests/: integration_tests.rs
exercises/datetime_seconds_calculator/: Cargo.toml
exercises/datetime_seconds_calculator/src/: lib.rs  main.rs
exercises/distance_bw_points/: Cargo.toml
exercises/distance_bw_points/src/: main.rs
exercises/flexible_datetime_parser/: Cargo.toml
exercises/flexible_datetime_parser/src/: lib.rs  main.rs
exercises/leap_year_checker/: Cargo.toml
exercises/leap_year_checker/src/: lib.rs  main.rs
exercises/leap_year_checker/tests/: integration_tests.rs
exercises/string_ownership_demo/: Cargo.toml
exercises/string_ownership_demo/src/: lib.rs  main.rs
exercises/unix_timestamp_converter/: Cargo.toml
exercises/unix_timestamp_converter/src/: lib.rs  main.rs
exercises/vector_borrowing_demo/: Cargo.toml
exercises/vector_borrowing_demo/src/: lib.rs  main.rs
exercises/vector_sort/: Cargo.toml
fundamentals/compound_datatypes/: Cargo.toml
fundamentals/expression_statements/: Cargo.toml
testing/adder/src/: lib.rs
web_concepts/axum-crud/: Cargo.toml  Dockerfile  docker-compose.yml
web_concepts/product-api/: .dockerignore  .env  ASYNC_LOGGING_OVERVIEW.md  Cargo.toml  Cargo_new.toml  Dockerfile  Makefile  docker-compose.yml  init.sql  nginx.conf  readme.md
web_concepts/product-api/scripts/: test_logging.sh
web_concepts/product-api/src/: config.rs  error.rs  lib.rs  main.rs  main_new.rs
web_concepts/product-api/src/entities/: mod.rs  prelude.rs  product.rs  user.rs
web_concepts/product-api/src/error/: mod.rs  registry.rs  response.rs  types.rs
web_concepts/product-api/src/handlers/: auth.rs  product.rs
web_concepts/product-api/src/logging/: mod.rs
web_concepts/product-api/src/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  rbac.rs
web_concepts/product-api/src/models/: auth.rs  mod.rs  product.rs
web_concepts/product-api/src/repository/: auth.rs  product.rs
web_concepts/product-api/src/services/: auth.rs  product.rs
web_concepts/product-api/src/utils/: jwt.rs  password.rs
web_concepts/product-api/tests/: auth_integration.rs  products_integration.rs  rate_limit_test.rs
web_concepts/rpo/: .env  Cargo.toml  docker-compose.yml
web_concepts/rpo/ops/ci/.github/workflows/: auth-service.yml
web_concepts/rpo/platform/k8s/base/: auth-service-deployment.yaml
web_concepts/rpo/services/auth/: Cargo.toml  Dockerfile  README.md
web_concepts/rpo/services/auth/src/: lib.rs  main.rs
web_concepts/rpo/services/auth/src/application/: mod.rs
web_concepts/rpo/services/auth/src/application/services/: auth_service.rs  mod.rs  tenant_service.rs  user_service.rs
web_concepts/rpo/services/auth/src/config/: mod.rs
web_concepts/rpo/services/auth/src/domain/: mod.rs
web_concepts/rpo/services/auth/src/domain/entities/: mod.rs  permission.rs  role.rs  session.rs  tenant.rs  user.rs
web_concepts/rpo/services/auth/src/domain/repositories/: mod.rs  permission_repository.rs  role_repository.rs  session_repository.rs  tenant_repository.rs  user_repository.rs
web_concepts/rpo/services/auth/src/domain/value_objects/: mod.rs
web_concepts/rpo/services/auth/src/infrastructure/: database.rs  migrations.rs  mod.rs
web_concepts/rpo/services/auth/src/infrastructure/entities/: mod.rs  permissions.rs  role_permissions.rs  roles.rs  sessions.rs  tenants.rs  user_roles.rs  users.rs
web_concepts/rpo/services/auth/src/infrastructure/repositories/: mod.rs  permission_repository_impl.rs  role_repository_impl.rs  session_repository_impl.rs  tenant_repository_impl.rs  user_repository_impl.rs
web_concepts/rpo/services/auth/src/migrations/: m20240101_000001_create_tenants_table.rs  m20240101_000002_create_permissions_table.rs  m20240101_000003_create_roles_table.rs  m20240101_000004_create_users_table.rs  m20240101_000005_create_sessions_table.rs  m20240101_000006_create_user_roles_table.rs  m20240101_000007_create_role_permissions_table.rs  m20240101_000008_seed_default_permissions.rs  mod.rs
web_concepts/rpo/services/auth/src/presentation/: mod.rs  routes.rs
web_concepts/rpo/services/auth/src/presentation/extractors/: auth_extractor.rs  mod.rs
web_concepts/rpo/services/auth/src/presentation/handlers/: auth_handlers.rs  internal_handlers.rs  mod.rs  tenant_handlers.rs  user_handlers.rs
web_concepts/rpo/services/auth/src/presentation/middleware/: auth.rs
web_concepts/rpo/services/auth/tests/: integration_tests.rs  unit_tests.rs
web_concepts/rpo/shared/crate-config/: Cargo.toml
web_concepts/rpo/shared/crate-config/src/: lib.rs
web_concepts/rpo/shared/crate-errors/: Cargo.toml
web_concepts/rpo/shared/crate-errors/src/: lib.rs
web_concepts/rpo/shared/crate-logging/: Cargo.toml
web_concepts/rpo/shared/crate-logging/src/: lib.rs
web_concepts/rpo/shared/crate-messaging/: Cargo.toml
web_concepts/rpo/shared/crate-messaging/src/: lib.rs
web_concepts/rpo/shared/crate-security/: Cargo.toml
web_concepts/rpo/shared/crate-security/src/: lib.rs
web_concepts/rpo/shared/crate-types/: Cargo.toml
web_concepts/rpo/shared/crate-types/src/: lib.rs
web_concepts/rpo/tools/makefile/: Makefile
web_concepts/rpo/tools/scripts/: run_dev.sh  seed_db.sh
web_concepts/todo-app/: Cargo.toml  Dockerfile  docker-compose.yml
web_concepts/todo-app/backend/: Cargo.toml
web_concepts/todo-app/backend/src/: log.rs  main.rs  todo.rs  user.rs
(+37 files in other folders)
