[workspace]
members = [
    "shared/crate-logging",
    "shared/crate-config", 
    "shared/crate-errors",
    "shared/crate-messaging",
    "shared/crate-security",
    "shared/crate-types",
    "services/auth",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
sea-orm-migration = "0.12"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto & JWT
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.21"
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"

# Config
config = "0.14"
figment = { version = "0.10", features = ["toml", "env"] }

# Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
utoipa-redoc = { version = "3.0", features = ["axum"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async trait
async-trait = "0.1"