[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.5", features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
tracing = "0.1"
anyhow = "1.0"
tracing-subscriber = "0.3"

utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
