[package]
name = "crate-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jsonwebtoken.workspace = true
sea-orm.workspace = true
