[package]
name = "crate-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }